[gd_scene load_steps=4 format=3 uid="uid://dtmq1kbcfmtda"]

[ext_resource type="Script" uid="uid://dxde0nti8nfsf" path="res://scripts/enemies/bosses/gunship.gd" id="1_frslv"]
[ext_resource type="PackedScene" uid="uid://biww4qk4w2o6u" path="res://scenes/enemies/bosses/gunship_centry.tscn" id="1_wf82b"]
[ext_resource type="PackedScene" uid="uid://brsfjfvxbu2fe" path="res://scenes/enemies/bosses/gunship_torpedo_launcher.tscn" id="3_ce88s"]

[node name="Gunship" type="CharacterBody2D" groups=["boss", "enemies"]]
script = ExtResource("1_frslv")

[node name="Body" type="Node2D" parent="."]
scale = Vector2(1.8, 1.8)

[node name="Polygon2D" type="Polygon2D" parent="Body"]
position = Vector2(87, -5)
color = Color(0.5270657, 0.23468089, 0.28146902, 1)
polygon = PackedVector2Array(246, 5, 226, -17, -27, -17, -58, -77, -121, -77, -131.996, -17, -230, -17, -237, 5, -137, 5)

[node name="Polygon2D2" type="Polygon2D" parent="Body"]
position = Vector2(0, -5)
color = Color(0.30588236, 0.34509805, 0.40392157, 1)
polygon = PackedVector2Array(34, -67, 281, -67, 310, -17, 60, -17)

[node name="Polygon2D3" type="Polygon2D" parent="Body"]
position = Vector2(0, -5)
color = Color(0.30588236, 0.34509805, 0.40392157, 1)
polygon = PackedVector2Array(-36, -67, -125, -67, -138, -17, -45, -17)

[node name="Polygon2D4" type="Polygon2D" parent="Body"]
position = Vector2(0, -5)
color = Color(0.654902, 0.30980393, 0.3647059, 1)
polygon = PackedVector2Array(26, -67, -28, -67, -37, -17, 52, -17)

[node name="Polygon2D5" type="Polygon2D" parent="Body"]
position = Vector2(0, -5)
color = Color(0.3764706, 0.42352942, 0.49019608, 1)
polygon = PackedVector2Array(313, -17, 60, -17, 60, -14, 315, -15)

[node name="Polygon2D6" type="Polygon2D" parent="Body"]
position = Vector2(0, -5)
color = Color(0.3764706, 0.42352942, 0.49019608, 1)
polygon = PackedVector2Array(-143, -17, -45, -17, -45, -14, -144, -14)

[node name="Polygon2D7" type="Polygon2D" parent="Body"]
position = Vector2(87, 5)
scale = Vector2(1, -1)
color = Color(0.5270657, 0.23468089, 0.28146902, 1)
polygon = PackedVector2Array(246, 5, 226, -17, -27, -17, -58, -77, -121, -77, -131.996, -17, -230, -17, -237, 5, -137, 5)

[node name="Polygon2D8" type="Polygon2D" parent="Body"]
position = Vector2(0, 5)
scale = Vector2(1, -1)
color = Color(0.30588236, 0.34509805, 0.40392157, 1)
polygon = PackedVector2Array(34, -67, 281, -67, 310, -17, 60, -17)

[node name="Polygon2D9" type="Polygon2D" parent="Body"]
position = Vector2(0, 5)
scale = Vector2(1, -1)
color = Color(0.30588236, 0.34509805, 0.40392157, 1)
polygon = PackedVector2Array(-36, -67, -125, -67, -138, -17, -45, -17)

[node name="Polygon2D10" type="Polygon2D" parent="Body"]
position = Vector2(0, 5)
scale = Vector2(1, -1)
color = Color(0.654902, 0.30980393, 0.3647059, 1)
polygon = PackedVector2Array(26, -67, -28, -67, -37, -17, 52, -17)

[node name="Polygon2D11" type="Polygon2D" parent="Body"]
position = Vector2(0, 5)
scale = Vector2(1, -1)
color = Color(0.3764706, 0.42352942, 0.49019608, 1)
polygon = PackedVector2Array(313, -17, 60, -17, 60, -14, 315, -15)

[node name="Polygon2D12" type="Polygon2D" parent="Body"]
position = Vector2(0, 5)
scale = Vector2(1, -1)
color = Color(0.3764706, 0.42352942, 0.49019608, 1)
polygon = PackedVector2Array(-143, -17, -45, -17, -45, -14, -144, -14)

[node name="Turrets" type="Node2D" parent="."]
scale = Vector2(1.8, 1.8)

[node name="LeftBack1" parent="Turrets" instance=ExtResource("1_wf82b")]
position = Vector2(-104, -42)

[node name="LeftBack2" parent="Turrets" instance=ExtResource("1_wf82b")]
position = Vector2(-66, -42)

[node name="LeftFront1" parent="Turrets" instance=ExtResource("1_wf82b")]
position = Vector2(226, -42)

[node name="LeftFront2" parent="Turrets" instance=ExtResource("1_wf82b")]
position = Vector2(264, -42)

[node name="RightBack1" parent="Turrets" instance=ExtResource("1_wf82b")]
position = Vector2(-104, 42)
rotation = -3.1415925

[node name="RightBack2" parent="Turrets" instance=ExtResource("1_wf82b")]
position = Vector2(-66, 42)
rotation = -3.1415925

[node name="RightFront1" parent="Turrets" instance=ExtResource("1_wf82b")]
position = Vector2(226, 42)
rotation = -3.1415925

[node name="RightFront2" parent="Turrets" instance=ExtResource("1_wf82b")]
position = Vector2(264, 42)
rotation = -3.1415925

[node name="GunshipTorpedoLauncher" parent="." instance=ExtResource("3_ce88s")]
position = Vector2(149, -88)

[node name="GunshipTorpedoLauncher2" parent="." instance=ExtResource("3_ce88s")]
position = Vector2(149, 88)
rotation = -3.1415927

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(1.8, 1.8)
polygon = PackedVector2Array(-150, 1, -125, 72, -34, 83, 30, 83, 281, 72, 333, 0, 281, -72, 29, -82, -34, -82, -125, -73)
